0.0.8

* Reset PATH_INFO and SCRIPT_NAME after running a subapp

0.0.7

* Change run so that it accepts Rack applications

0.0.6

* Add put request method

0.0.5

* Add explicit Rack version dependency (@luislavena)

0.0.4

* Add concept of Decks

0.0.3

* Remove request method overriding (@larrylv)

0.0.2

* Defer method comparisons to Rack::Request (@pote)